# puck

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: color.rs  lib.rs  math.rs
core/src/app/: mod.rs
core/src/event/: mod.rs
core/src/network/: client.rs  codec.rs  mod.rs  server.rs
puck/: Cargo.toml
puck/examples/: astro.rs
puck/src/: camera.rs  dimensions.rs  input.rs  lib.rs  resources.rs
puck/src/app/: mod.rs  runner.rs
puck/src/audio/: context.rs  engine.rs  load.rs  mod.rs  source.rs  worker.rs
puck/src/render/: camera.rs  input.rs  mod.rs  quads.rs  shader.rs  texture_array.rs  texture_region.rs
puck/src/render/gfx/: init.rs  mod.rs  renderer.rs
resources/shader/: fat.frag
