[package]
name = "puck_core"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "0.8"

tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "*"

time = "0.1"

fnv = "1.0.5"

rand = "0.3"
cgmath = "0.15"

rayon = "0.8"