[package]
name = "puck"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
lewton = "0.5"
alto = "1.1"

notify = "4.0"
time = "0.1"

rand = "0.3"
cgmath = "0.15"

puck_core = { path = "../core" }

gfx = "0.16"
gfx_device_gl = "0.14"
glutin = "0.9"
gfx_window_glutin = "0.17"
image = "0.14"
rusttype = "0.2"