[package]
name = "puck"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
lewton = "0.5"
alto = "1.1"

notify = "4.0"
time = "0.1"

rand = "0.3"
cgmath = { version = "0.15", features = ["serde"] }

puck_core = { path = "../core" }

gfx = "0.16"
gfx_device_gl = "0.14"
glutin = "0.9"
gfx_window_glutin = "0.17"
image = "0.14"
rusttype = "0.2"

rayon = "0.8"

serde = "1.0"
serde_derive = "1.0"

multimap = "0.4"
